--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Excel made on JS",
   "main": "index.js",
   "scripts": {
-    "start": "yarn cross-env NODE_ENV=development webpack serve --open",
+    "start": "yarn cross-env NODE_ENV=development webpack serve",
     "build": "yarn cross-env NODE_ENV=production webpack --mode production"
   },
   "repository": "https://github.com/ladown/excel-js.git",
@@ -32,6 +32,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.12.1"
+    "@babel/polyfill": "^7.12.1",
+    "normalize.css": "^8.0.1"
   }
 }
