--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,10 @@
     "linebreak-style": "off",
     "object-curly-spacing": "off",
     "require-jsdoc": "off",
-    "max-len": "off"
+    "max-len": "off",
+    "no-trailing-spaces": "off",
+    "padded-blocks": "off",
+    "operator-linebreak": "off"
   },
   "extends": ["eslint:recommended", "google"]
 }
