completed the formation of the functional framework

--- a/.eslintrc
+++ b/.eslintrc
@@ -12,7 +12,8 @@
     "max-len": "off",
     "no-trailing-spaces": "off",
     "padded-blocks": "off",
-    "operator-linebreak": "off"
+    "operator-linebreak": "off",
+    "indent": "off"
   },
   "extends": ["eslint:recommended", "google"]
 }
